objects/Product_Service__c.object
<CustomObject><fields>
        <fullName>Product_Configuration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Services</relationshipLabel>
        <relationshipName>Product_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Service_Price__c</fullName>
        <label>Service Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Product Services</relationshipLabel>
        <relationshipName>Product_Services</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Product Service</label><nameField>
        <displayFormat>ProdServ-{000000}</displayFormat>
        <label>Product Service Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Product Services</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>